# turn-alerts-client

./: .gitignore  README.md  alerts.py  config.py  example.py  exceptions.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
schemas/: create_alerts.py  list_alerts.py
src/schemas/: create_alerts.py
src/test/: conftest.py  test_create_alert.py
src/test/cassettes/: create_alert1.yml
src/turn_alerts/: alerts.py  exceptions.py  rest.py
src/turn_alerts/schemas/: create_alerts.py  get_export_alerts.py  tags.py  types.py
turn_alerts/: alerts.py  rest.py
turn_alerts/schemas/: invalid_response.py  types.py
