[project]
name = "turn-alerts"
version = "0.0.5"
authors = [
  { name="Amir Canto", email="amir@turn.ai" },
]
description = "Client library for connecting with Turn's notifications microservice."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "marshmallow >= 3.19.0",
    "requests >= 2.28.1"
]

[options]
package_dir="turn_alerts"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"