[project]
name = "turn_alerts"
version = "0.0.2"
authors = [
  { name="Amir Canto", email="amir@turn.ai" },
]
description = "Client library for connecting with Turn's notifications microservice."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "marshmallow >= 3.19.0",
    "requests >= 2.28.1",
    "typing-extensions >= 4.4.0"
]

[options]
package_dir="src"

[options.packages.find]
where="src"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
